# robot

./: .gitignore
avoidance_policy/: CMakeLists.txt  README.md  package.xml
avoidance_policy/cfg/: twist_mux.yaml
avoidance_policy/launch/: avoidance.launch
avoidance_policy/scripts/: avoidance_policy_node.py
onboard_detector_python/: CMakeLists.txt  package.xml  setup.py
onboard_detector_python/cfg/: detector_param.yaml  detector_param_origin.yaml
onboard_detector_python/launch/: run_detector.launch  run_fake_detector.launch
onboard_detector_python/rviz/: avoidance_monitoring.rviz  detector_view.rviz
onboard_detector_python/scripts/: corridor_policy.py
onboard_detector_python/scripts/yolo_detector/: export_trt.py  yolo_detector.py  yolov11_detector.py  yolov11_detector_node.py
onboard_detector_python/src/onboard_detector_python/: __init__.py  dbscan.py  detector_node.py  dynamic_detector.py  fake_detector.py  fake_detector_node.py  gpu_dbscan.py  kalman_filter.py  lidar_detector.py  utils.py  uv_detector.py
policy/: corridor_policy_node.py  run_policy.launch
slam/: CMakeLists.txt  package.xml
slam/config/: ekf_map.yaml  ekf_odom.yaml  hdl_localization.yaml  pointcloud_filter.yaml
slam/launch/: hdl_localization.launch  robot_localization.launch  slam_localization.launch
slam/map/: scans.yaml
slam/rviz/: slam_localization.rviz
slam/scripts/: pose_correction_node.py
slam/src/: pointcloud_filter_node.cpp
