<?xml version="1.0"?>
<package format="2">
  <name>robot_slam</name>
  <version>0.1.0</version>
  <description>
    Optimized SLAM and Localization package for irop robot.
    Addresses: position correction, noise filtering, rotation correction.
    Stack: Fast-LIO mapping + HDL-Localization (NDT/GICP) + robot_localization EKF.
  </description>
  <maintainer email="irop@robot.local">irop</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- SLAM / Localization -->
  <depend>hdl_localization</depend>
  <depend>hdl_global_localization</depend>
  <depend>fast_lio</depend>
  <depend>robot_localization</depend>

  <!-- Point cloud -->
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <!-- Nodelet -->
  <depend>nodelet</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
</package>
